FIX: Alignment in New Assignment metabox

--- a/css/e20r-tracker-admin.css
+++ b/css/e20r-tracker-admin.css
@@ -179,3 +179,4 @@ input#e20r-send-email-message {
     color: #FFF !important;
 }
 .fa-stack br { display: none; }
+table#new-assignments td { vertical-align: middle; }
